--- a/.gitignore
+++ b/.gitignore
@@ -30,9 +30,9 @@ x86/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
 bld/
-[Bb]in
-![Bb]in/assets
-![Bb]in/shd
+[Bb]in/*
+![Bb]in/assets/
+![Bb]in/shd/
 #[Oo]bj/
 [Ll]og/
 
